--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,69 @@
 @import "./reset.css";
+
+html,
+body {
+  /* Don't exceed edges of screen */
+  min-height: 100%;
+  overflow-x: hidden;
+  width: 100%;
+  /* Default font */
+  font-family: "Mohave", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* Anti-aliasing */
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+section {
+  width: 100%;
+  padding: 60px;
+
+  /* Fill exactly the screen's height, factoring in padding */
+  height: calc(100vh - 120px);
+
+  /* Flexbox for the win */
+  display: flex;
+  flex-wrap: wrap;
+  word-wrap: normal;
+  flex-direction: column;
+  justify-content: center;
+
+  font-size: 1.5em;
+}
+@media only screen and (max-width: 768px) {
+  section {
+    padding: 30px;
+    height: calc(100vh - 60px);
+
+    font-size: 4vw;
+  }
+}
+
+section.light {
+  background-color: #f2f2f2;
+  color: #07393c;
+}
+
+section.dark {
+  background-color: #07393c;
+  color: #f2f2f2;
+}
+
+section#intro h1 {
+  font-size: 5em;
+  font-weight: 600;
+  margin: 30px 0;
+  line-height: 1.2em;
+}
+@media only screen and (max-width: 768px) {
+  section#intro h1 {
+    font-size: 3em;
+  }
+}
+section#intro p {
+  font-size: 2em;
+  font-weight: 300;
+  line-height: 1.3em;
+}
