--- a/css/main.css
+++ b/css/main.css
@@ -17,28 +17,40 @@ body {
 }
 
 section {
-  width: 100%;
   padding: 60px;
-
-  /* Fill exactly the screen's height, factoring in padding */
-  height: calc(100vh - 120px);
-
-  /* Flexbox for the win */
-  display: flex;
-  flex-wrap: wrap;
-  word-wrap: normal;
-  flex-direction: column;
-  justify-content: center;
-
-  font-size: 1.5em;
+  font-size: 1.7em;
 }
 @media only screen and (max-width: 768px) {
   section {
+    width: 100%;
     padding: 30px;
-    height: calc(100vh - 60px);
+    min-height: calc(100vh - 60px);
 
     font-size: 4vw;
   }
+}
+section > div {
+  width: 60%;
+  /* Fill exactly the screen's height, factoring in padding */
+  min-height: calc(100vh - 120px);
+  margin: 0 auto;
+  /* Flexbox for the win */
+  display: flex;
+  flex-direction: column;
+  word-wrap: normal;
+  justify-content: center;
+}
+@media only screen and (max-width: 1920px) {
+  section > div {
+    /* Big section padding only happens for big screens */
+    width: 100%;
+  }
+}
+
+section h2 {
+  font-size: 3em;
+  font-weight: bold;
+  margin-bottom: 60px;
 }
 
 section.light {
@@ -66,4 +78,35 @@ section#intro p {
   font-size: 2em;
   font-weight: 300;
   line-height: 1.3em;
+}
+
+section#officers #officers-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 50px;
+}
+@media only screen and (max-width: 1200px) {
+  section#officers #officers-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (max-width: 768px) {
+  section#officers #officers-grid {
+    grid-template-columns: 1fr;
+  }
+}
+section#officers img {
+  height: 270px;
+  border-radius: 5px;
+  border: 2px solid #f2f2f2;
+  filter: grayscale(0.5);
+}
+
+section#officers .name {
+  margin: 20px 0px;
+  font-size: 1.5em;
+  line-height: 1.4em;
+}
+section#officers .year {
+  font-style: italic;
 }
