--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,11 @@ body {
 a {
   opacity: 0.5;
   transition-duration: 0.3s;
+  text-decoration: none;
+  color: inherit;
+}
+a::before {
+  content: "→ ";
 }
 a:hover {
   opacity: 1;
@@ -31,7 +36,7 @@ section {
 @media only screen and (max-width: 768px) {
   section {
     width: 100%;
-    padding: 30px;
+    padding: 60px 30px;
     font-size: 4vw;
   }
 }
@@ -45,11 +50,6 @@ section > div {
   justify-content: center;
   /* Fill exactly the screen's height, factoring in padding */
   min-height: calc(100vh - 120px);
-}
-@media only screen and (max-width: 768px) {
-  section > div {
-    min-height: calc(100vh - 60px);
-  }
 }
 @media only screen and (max-width: 1920px) {
   section > div {
@@ -135,7 +135,55 @@ section#other > div {
 
 section#resources a {
   display: block;
-  text-decoration: none;
-  color: inherit;
   margin-bottom: 20px;
+}
+
+section#other > div > div {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  font-size: 1.5em;
+}
+@media only screen and (max-width: 768px) {
+  section#other > div > div {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+}
+section#other img {
+  height: 80px;
+  display: inline;
+  margin-right: 40px;
+  filter: invert(1);
+}
+section#other p {
+  display: inline;
+  margin-right: 10px;
+}
+@media only screen and (max-width: 768px) {
+  section#other p {
+    margin: 30px 0px 20px;
+  }
+}
+
+section#other div > div:not(#github) {
+  margin-bottom: 60px;
+}
+
+section#credits {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+section#credits > p:last-child {
+  opacity: 0.5;
+}
+@media only screen and (max-width: 768px) {
+  section#credits > p {
+    width: 100%;
+  }
+  section#credits > p:last-child {
+    margin-top: 20px;
+  }
 }
